Use sets for keys in nodes